<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/prefCategory_title_display"
        android:key="prefCategory_display">
        <CheckBoxPreference
            android:key="pref_stereoDisplay"
            android:title="@string/pref_title_stereoDisplay"
            android:dialogTitle="@string/pref_title_stereoDisplay"
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:summaryOff="@string/pref_summary_stereoDisplayOff"
            android:summaryOn="@string/pref_summary_stereoDisplayOn"
            />
        <CheckBoxPreference
            android:key="pref_forceLandscape"
            android:title="@string/pref_title_forceLandscape"
            android:dialogTitle="@string/pref_title_forceLandscape"
            android:defaultValue="false"
            android:summaryOff="@string/pref_summary_forceLandscapeOff"
            android:summaryOn="@string/pref_summary_forceLandscapeOn"
            />
	    <ListPreference
	        android:key="pref_stereoDisplayMode"
	        android:dependency="pref_stereoDisplay"
	        android:title="@string/pref_title_stereoDisplayMode"
	        android:dialogTitle="@string/pref_title_stereoDisplayMode"
	        android:entries="@array/pref_entries_stereoDisplayMode"
	        android:entryValues="@array/pref_entryValues_stereoDisplayMode"
	        android:defaultValue="@string/pref_defaultValue_stereoDisplayMode"
	       	/>
   	</PreferenceCategory>
    <PreferenceCategory 
    	android:title="@string/prefCategory_title_calibration"
        android:key="prefCategory_calibration">
   	    <ListPreference
	        android:key="pref_eyeSelection"
	        android:title="@string/pref_title_eyeSelection"
	        android:dialogTitle="@string/pref_title_eyeSelection"
	        android:entries="@array/pref_entries_eyeSelection"
	        android:entryValues="@array/pref_entryValues_eyeSelection"
	        android:defaultValue="0"
	       	/>
   	</PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/prefCategory_title_camera"
        android:key="prefCategory_camera">
	    <ListPreference
	        android:key="pref_cameraResolution"
	        android:title="@string/pref_title_cameraResolution"
	        android:dialogTitle="@string/pref_title_cameraResolution"
	        android:entries="@array/pref_entries_cameraResolution"
	        android:entryValues="@array/pref_entryValues_cameraResolution"
	        android:defaultValue="@string/pref_defaultValue_cameraResolution"
	       	/>
	    <ListPreference
			android:key="pref_cameraIndex"
			android:title="@string/pref_title_cameraIndex"
			android:dialogTitle="@string/pref_title_cameraIndex"
	        android:entries="@array/pref_entries_cameraIndex"
	        android:entryValues="@array/pref_entryValues_cameraIndex"
	        android:defaultValue="0"
			android:enabled="false"
			android:shouldDisableView="true"
	    	/>
	</PreferenceCategory>
</PreferenceScreen>
